[package]
name = "nevermore-fms"
version = "0.3.0"
authors = ["Edgar Allan Ohms 5276"]
edition = "2021"


[dependencies]
# Framework
ractor = "0.8"
tokio = { version = "1.29.1", features = ["full"] }

# CLI
clap = { version = "4.3.19", features = ["derive", "env"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"

# Utils
anyhow = "1.0.72"
async-trait = "0.1.72"
chrono = "0.4.26"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
async-channel = "1.9.0"
cidr = "0.2.2"