[package]
name = "nevermore-fms"
version = "0.3.0"
authors = ["Edgar Allan Ohms 5276"]
edition = "2024"


[dependencies]
# Framework
tokio = { version = "1", features = ["full", "tracing"] }

# CLI
clap = { version = "4.5.47", features = ["derive", "env"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"

# Utils
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = "0.4.41"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
async-channel = "2.5.0"
cidr = "0.3.1"
poem = "3.1.12"
async-graphql = "7.0.17"
async-graphql-poem = "7.0.17"
dry-mods = "0.1.5"
console-subscriber = "0.4.1"
